Allow user agent to be overridden in popup webview creation

When a webview-embedding app creates another webview inside
WebChromeClient#onCreateWindow(), the navigator does not have
a current entry nor pending entry yet, but decides not to override
user agent nevertheless, in creating navigation request.

Therefore, the intent to override the user agent is ignored in
creating navigation request.

This can be fixed by looking up the delegate as a fall-back.

BUG=614951

Change-Id: I00fe0a26e67116517f59452e89297018a09ffa8e