content/browser/frame_host/interstitial_page_impl.h
@@ -97,6 +97,7 @@ class CONTENT_EXPORT InterstitialPageImpl : public InterstitialPage,
   // NavigatorDelegate implementation.
   WebContents* OpenURL(const OpenURLParams& params) override;
   const std::string& GetUserAgentOverride() const override;
+  bool ShouldOverrideUserAgentForSpawnedNavigations() override;
   bool ShowingInterstitialPage() const override;
 
  protected:
