content/browser/frame_host/navigator_delegate.h
@@ -99,6 +99,10 @@ class CONTENT_EXPORT NavigatorDelegate {
   // Returns the overriden user agent string if it's set.
   virtual const std::string& GetUserAgentOverride() const = 0;
 
+  // Returns whether we should override the user agent for spawned
+  // navigations, e.g., for webview's popup window when current entry.
+  virtual bool ShouldOverrideUserAgentForSpawnedNavigations() = 0;
+
   // A RenderFrameHost in the specified |frame_tree_node| started loading a new
   // document. This correponds to Blink's notion of the throbber starting.
   // |to_different_document| will be true unless the load is a fragment
