android_webview/javatests/src/org/chromium/android_webview/test/AwActivityTestRule.java
@@ -53,6 +53,14 @@ public class AwActivityTestRule extends ActivityTestRule<AwTestRunnerActivity> {
 
     private static final Pattern MAYBE_QUOTED_STRING = Pattern.compile("^(\"?)(.*)\\1$");
 
+    /**
+     * An interface to call onCreateWindow(AwContents).
+     */
+    public interface OnCreateWindowHandler {
+        /** This will be called when a new window pops up from the current webview. */
+        public boolean onCreateWindow(AwContents awContents);
+    }
+
     private Description mCurrentTestDescription;
 
     // The browser context needs to be a process-wide singleton.
@@ -525,8 +533,19 @@ public class AwActivityTestRule extends ActivityTestRule<AwTestRunnerActivity> {
 
     /**
      * Supplies the popup window with AwContents then waits for the popup window to finish loading.
+     * @param parentAwContents Parent webview's AwContents.
      */
     public PopupInfo connectPendingPopup(final AwContents parentAwContents) throws Exception {
+        return connectPendingPopup(parentAwContents, null);
+    }
+
+    /**
+     * Supplies the popup window with AwContents then waits for the popup window to finish loading.
+     * @param parentAwContents Parent webview's AwContents.
+     * @param onCreateWindowHandler An instance of OnCreateWindowHandler. null if there isn't.
+     */
+    public PopupInfo connectPendingPopup(final AwContents parentAwContents,
+            OnCreateWindowHandler onCreateWindowHandler) throws Exception {
         TestAwContentsClient popupContentsClient;
         AwTestContainerView popupContainerView;
         final AwContents popupContents;
@@ -534,6 +553,8 @@ public class AwActivityTestRule extends ActivityTestRule<AwTestRunnerActivity> {
         popupContainerView = createAwTestContainerViewOnMainSync(popupContentsClient);
         popupContents = popupContainerView.getAwContents();
         enableJavaScriptOnUiThread(popupContents);
+
+        if (onCreateWindowHandler != null) onCreateWindowHandler.onCreateWindow(popupContents);
 
         ThreadUtils.runOnUiThreadBlocking(
                 () -> parentAwContents.supplyContentsForPopup(popupContents));
